--- a/app/src/main/res/layout/activity_poke_list.xml
+++ b/app/src/main/res/layout/activity_poke_list.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.PokeListActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pokelistRecyclerView"
+        android:layout_width="423dp"
+        android:layout_height="733dp"
+        android:layout_marginTop="8dp"
+        android:background="#1C1C1C"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:itemCount="5"
+        tools:listitem="@layout/card_pokemon_search" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
